--- a/salesforce-connector-demo/src_hd/salesforce/connector/demo/ListTasks/ListTasks.xhtml
+++ b/salesforce-connector-demo/src_hd/salesforce/connector/demo/ListTasks/ListTasks.xhtml
@@ -7,80 +7,83 @@
 	xmlns:pe="http://primefaces.org/ui/extensions">
 <h:body>
 	<ui:composition template="/layouts/frame-10-full-width.xhtml">
-		<ui:define name="title">#{ivy.cms.co('/Dialogs/listOpps/listOpps')}</ui:define>
+		<ui:define name="title">list Tasks</ui:define>
 		<ui:define name="content">
 			<ui:include src="/layouts/includes/portalConfig.xhtml"/>
+		
+		
 			<h:form id="form">
 				<p:growl id="msgs" showDetail="true" skipDetailIfEqualsSummary="true" />
 				<div class="command-btns">
-					<p:commandButton id="add" actionListener="#{data.bean.addNewOppotunity()}" oncomplete="PF('oppCreateDialog').show()" update="#{p:resolveFirstComponentWithId('oppCreateForm', view).clientId}"
+					<p:commandButton id="add" actionListener="#{data.bean.addNewTask()}" oncomplete="PF('taskCreateDialog').show()"
 						value="Add New" icon="si si-add">						
 					</p:commandButton>
 				</div>
 				<div class="ui-fluid">
 					<div class="ui-g">
 						<div class="ui-g-12 ui-md-12 ui-lg-12">
-							<p:dataTable id="oppDataTable" widgetVar="oppDataTable"
-								value="#{data.bean.opportunities}" var="opp" rowKey="#{opp.id}" rows="10"
+						
+							<p:dataTable id="dataTable" widgetVar="dataTable"
+								value="#{data.bean.tasks}" var="opp" rowKey="#{opp.id}" rows="10"
 								paginator="true"
 								paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 								currentPageReportTemplate="({currentPage} of {totalPages})"
 								rowsPerPageTemplate="5,10,20" paginatorPosition="bottom"
 								emptyMessage="No records found"
-								filteredValue="#{data.bean.filterOpps}"
+								filteredValue="#{data.bean.filterTasks}"
 								globalFilterFunction="#{data.bean.globalFilterFunction}">
-
-								<f:facet name="header">
+					 			<f:facet name="header">
 					 			    <div class="flex " style="justify-self:center">
-					 					List Opportunities
+					 				List Tasks
 					 				</div>
 					 				<div class="flex" style="justify-self:end">
-				         	           <p:inputText  id="globalFilter" onkeyup="PF('oppDataTable').filter()" style="width:200px;"
+				         	           <p:inputText  id="globalFilter" onkeyup="PF('dataTable').filter()" style="width:200px;"
 					                                 placeholder="Search all fields..." />
-                                    </div>
+					                                 </div>
 <!-- 					                </div> -->
 					            </f:facet>
 								<p:column
-									headerText="#{ivy.cms.co('/Dialogs/listOpps/oppName')}"
-									width="120px;" sortBy="#{opp.name}"
-									filterBy="#{opp.name}" filterMatchMode="contains">
-									<p:commandLink value="#{opp.name}"
-										actionListener="#{data.bean.openOpportunityDetail(opp.id)}"
-										oncomplete="PF('opportunityDetailDialog').show()"
-										update="opportunityDetail" />
+									headerText="Subject"
+									width="120px;" sortBy="#{opp.subject}"
+									filterBy="#{opp.subject}" filterMatchMode="contains">
+									<p:commandLink value="#{opp.subject}"
+										actionListener="#{data.bean.openTaskDetail(opp.id)}"
+										oncomplete="PF('taskDetailDialog').show()"
+										update="taskDetail" />
 								</p:column>
 								<p:column
-									headerText="#{ivy.cms.co('/Dialogs/listOpps/accName')}"
+									headerText="Description"
+									width="200px;" sortBy="#{opp.description}"
+									filterBy="#{opp.description}" filterMatchMode="contains">
+									<h:outputText value="#{opp.description}"
+										/>
+								</p:column>
+								<p:column
+									headerText="Account Name"
 									width="100px;" sortBy="#{opp.accName}"
 									filterBy="#{opp.accName}" filterMatchMode="contains">
 									<h:outputText value="#{opp.accName}" />
 								</p:column>
-								<p:column headerText="#{ivy.cms.co('/Dialogs/listOpps/amount')}"
-									width="100px;" sortBy="#{opp.amount}" filterBy="#{opp.amount}"
-									filterMatchMode="contains">
-									<h:outputText value="#{opp.amount}" />
-								</p:column>
 								<p:column
-									headerText="#{ivy.cms.co('/Dialogs/listOpps/closeDate')}"
-									width="100px;" sortBy="#{opp.closeDate}"
-									filterBy="#{opp.closeDate}" filterMatchMode="contains">
-									<h:outputText value="#{opp.closeDate}">
-										<f:convertDateTime pattern="dd.MM.yyyy" />
+									headerText="Completed Date"
+									width="100px;" sortBy="#{opp.completedDateTime}"
+									filterBy="#{opp.completedDateTime}" filterMatchMode="contains">
+									<h:outputText value="#{opp.completedDateTime}">
+										<f:convertDateTime pattern="dd.MM.yyyy HH:mm:ss" />
 									</h:outputText>
 								</p:column>
-								<p:column headerText="#{ivy.cms.co('/Dialogs/listOpps/stage')}"
-									width="100px;" sortBy="#{opp.stageName}" filterBy="#{opp.stageName}"
+								<p:column headerText="Status"
+									width="100px;" sortBy="#{opp.status}" filterBy="#{opp.status}"
 									filterMatchMode="contains">
-									<h:outputText value="#{opp.stageName
-									}" />
+									<h:outputText value="#{opp.status}" />
 								</p:column>
 								<p:column id="actionColumn" toggleable="false"
 									headerText="#{ivy.cms.co('/Dialogs/listOpps/action')}"
 									width="60px;" exportable="false" selectRow="false">
 									<p:commandLink id="edit"
-										actionListener="#{data.bean.updateOppotunity(opp.id)}"
-										oncomplete="PF('oppUpdateDialog').show()"
-										update="#{p:resolveFirstComponentWithId('oppUpdateForm', view).clientId}"
+										actionListener="#{data.bean.updateTask(opp.id)}"
+										oncomplete="PF('taskUpdateDialog').show()"
+										update="#{p:resolveFirstComponentWithId('taskUpdateForm', view).clientId}"
 										title="Edit">
 										<i class="fa fa-pencil mx-1" />
 									</p:commandLink>
@@ -111,10 +114,10 @@
 				<p:commandButton value="Yes" type="button"
 					styleClass="ui-confirmdialog-yes" />
 			</p:confirmDialog>
-
-			<ui:include src="OppDetail.xhtml"></ui:include>
-			<ui:include src="CreateOppotunity.xhtml"><ui:param name="idName" value="oppCreate"/><ui:param name="saveButtonMethod" value="save"/></ui:include>
-			<ui:include src="CreateOppotunity.xhtml"><ui:param name="idName" value="oppUpdate"/><ui:param name="saveButtonMethod" value="update"/></ui:include>
+			<f:phaseListener binding="#{data.readOnlyDetailDialog}" />
+			<ui:include src="CreateDialog.xhtml"><ui:param name="idName" value="taskCreate"/><ui:param name="saveButtonMethod" value="save"/></ui:include>
+			<ui:include src="CreateDialog.xhtml"><ui:param name="idName" value="taskUpdate"/><ui:param name="saveButtonMethod" value="update"/></ui:include>
+			<ui:include src="CreateDialog.xhtml"><ui:param name="idName" value="taskDetail"/><ui:param name="saveButtonMethod" value=""/></ui:include><!-- no save -->
 
 		</ui:define>
 	</ui:composition>
