change acccount to opportunity

--- a/salesforce-connector-demo/src_hd/salesforce/connector/demo/ListTasks/ListTasks.xhtml
+++ b/salesforce-connector-demo/src_hd/salesforce/connector/demo/ListTasks/ListTasks.xhtml
@@ -59,7 +59,7 @@
 										/>
 								</p:column>
 								<p:column
-									headerText="Account Name"
+									headerText="Opportunity"
 									width="100px;" sortBy="#{opp.accName}"
 									filterBy="#{opp.accName}" filterMatchMode="contains">
 									<h:outputText value="#{opp.accName}" />
