--- a/salesforce-connector-demo/src_hd/salesforce/connector/demo/ListLeads/CreateDialog.xhtml
+++ b/salesforce-connector-demo/src_hd/salesforce/connector/demo/ListLeads/CreateDialog.xhtml
@@ -29,7 +29,7 @@
 								<p:outputLabel value="Lastname" for="@next"></p:outputLabel>
 							</div>
 							<div class="ui-g-12 ui-md-10 ui-lg-10">
-								<p:inputText id="lastnameObj" readonly="false"
+								<p:inputText id="lastnameObj" required="true"
 									value="#{data.bean.selected.lastName}"></p:inputText>
 							</div>
 							<div class="ui-g-12 ui-md-2 ui-lg-2">
